Modify .gitattributes for notebook detection
Update .gitattributes to force detection of Jupyter Notebooks and adjust Python file settings.

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+# Force everything to be seen as a notebook
+* [-]linguist-language=Jupyter-Notebook
 *.ipynb linguist-detectable=true
 *.py linguist-detectable=false
-# Fix language statistics
