Update .gitattributes for CSV file handling
Add CSV files as generated and documentation in .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
-# Force everything to be seen as a notebook
-* [-]linguist-language=Jupyter-Notebook
 *.ipynb linguist-detectable=true
 *.py linguist-detectable=false
+*.csv linguist-generated=true
+*.csv linguist-documentation=true
+# Force GitHub to prioritize the Notebooks
