--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,5 @@
 # Force GitHub to prioritize the Notebooks
+* linguist-language=Jupyter-Notebook
+*.ipynb linguist-detectable=true
+*.py linguist-detectable=false
+*.csv linguist-generated=true
